2010-04-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinDialog.c   Fix [Bug 2987995]: Tk_GetOpenFile returns garbage
	under described circumstances
	* win/tkWinDialog.c   [Patch 2898255]: Filenames limit with Tk_GetFileName()
	Assure modern style dialogs where available

2010-04-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinPort.h     Fix [Patch 2986105]: conditionally defining
	strcasecmp/strncasecmp

2010-04-12  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgPNG.c (WriteIDAT): [Bug 2984787]: Use the correct
	flushing semantics when handling the last data from the image. Without
	this, many PNG readers (notably including Firefox) refuse to show the
	image and instead complain about errors.
	(ReadIDAT): Added sanity checks to ensure that when we've got bad data
	of the sorts of forms we were previously generating, we detect it and
	error out rather than silently failing.
	(WriteExtraChunks): New function to write in some basic metadata.

2010-04-09  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/photo.n:    Follow-up to [Bug 2983824]: update doc.

2010-04-09  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgPhoto.c (ImgPhotoCmd): [Bug 2983824]: Use the file
	extension to guess the output format to use if one isn't specified.

2010-04-08  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinPort.h:    Add <wchar.h> to tkWinPort.h, and
	* win/tkWinSend.c:    remove some earlier CYGWIN-related
	* win/tkWinSendCom.c: hacks which are no longer necessary.

2010-04-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:         Sync with Tcl version
	* unix/tcl.m4:
	* win/configure:      (regenerate with autoconf-2.59)
	* unix/configure:     [Bug 2982540]: configure and install* script
			      files should always have LF

2010-03-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:            Only test for -visibility=hidden with gcc
	                          (Second remark in [Bug 2976508])
	* unix/configure:         regen
