@@ -9,11 +9,21 @@
  * Copyright (c) 1998-1999 by Scriptics Corporation.
  * All rights reserved.
  *
- * RCS: @(#) $Id: tkIntXlibDecls.h,v 1.29 2010/02/05 10:56:43 nijtmans Exp $
+ * RCS: @(#) $Id: tkIntXlibDecls.h,v 1.30 2010/04/20 08:17:22 nijtmans Exp $
  */
 
 #ifndef _TKINTXLIBDECLS
 #define _TKINTXLIBDECLS
+
+/*
+ * WARNING: This file is automatically generated by the tools/genStubs.tcl
+ * script.  Any modifications to the function declarations below should be made
+ * in the generic/tkInt.decls script.
+ */
+
+#ifndef _TCL
+#   include <tcl.h>
+#endif
 
 #include "X11/Xutil.h"
 
@@ -21,12 +31,6 @@
 #undef TCL_STORAGE_CLASS
 #define TCL_STORAGE_CLASS DLLEXPORT
 #endif
-
-/*
- * WARNING: This file is automatically generated by the tools/genStubs.tcl
- * script.  Any modifications to the function declarations below should be made
- * in the generic/tkInt.decls script.
- */
 
 /* !BEGIN!: Do not edit below this line. */
 
